--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@ select {
   width: 100%;
   padding: 8px 7px;
   font-size: 16px;
-  border: 2px solid #4a5568;
-  background-color: #2d3748;
+  border: 2px solid #5773a3;
+  background-color: #4a5568;
   color: white;
   margin: 5px 0px;
   outline: none;
