--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  
 }
 form {
   width: 500px;
@@ -93,4 +94,25 @@ th, td {
 th {
   background-color: #4a5568; 
   text-align: left; 
+}
+
+.table-container {
+  max-height: 300px;
+  overflow-y: auto;
+  border-color: #ffffff;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  text-align: left; 
+  width: 500px;
+  margin-top: 20px;
+}
+
+.predict-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
