--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ th {
 }
 
 .table-container {
-  max-height: 300px;
+  max-height: 700px;
   overflow-y: auto;
   border-color: #ffffff;
 }
@@ -115,4 +115,14 @@ th {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.deleteButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  font-weight: bold;
+  line-height: 2px;
+  color: aqua;
 }
